--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ MAIL_USERNAME=qaziabdurrahman12@gmail.com
 MAIL_PASSWORD=svmdjcxewynoudio
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=no-reply@mavensadvisor.com
-MAIL_FROM_NAME="Mavens Advisor"
+MAIL_FROM_NAME="AI AGENT"
 
 IMAP_HOST=imap.gmail.com
 IMAP_PORT=993
