--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "imap": "^0.8.19",
     "mailparser": "^3.7.2",
+    "mongoose": "^8.14.1",
     "nodemailer": "^6.10.1"
   }
 }
